<resources>
    <string name="app_name">Biblo</string>

    <string name="btn_new_group">New group</string>
    <string name="btn_create_group">Create group</string>
    <string name="btn_registration">Registration</string>
    <string name="btn_new_bill">New bill</string>
    <string name="btn_search">Search</string>
    <string name="btn_add">Add</string>
    <string name="btn_split_text">Split equally</string>
    <string name="btn_create_bill">Create bill</string>
    <string name="btn_add_members">Add members</string>
    <string name="btn_create">Create</string>
    <string name="btn_make_search">Search</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_save">Save</string>

    <string name="title_add_group">Group creation</string>
    <string name="title_add_members">Add members</string>
    <string name="title_bills">Bills</string>
    <string name="title_add_bill">Bill creation</string>
    <string name="title_chat">Chat</string>

    <string name="label_delete_group">Delete group</string>
    <string name="label_group_name">Name</string>
    <string name="label_choose_currency">Choose currency:</string>
    <string name="label_currency">Currency</string>
    <string name="label_my_currency">Own currency</string>
    <string name="label_choose_avatar">Choose avatar:</string>
    <string name="label_add_members">Add members</string>
    <string name="label_name">Name</string>
    <string name="label_avatar">Avatar</string>
    <string name="label_all_groups">All groups</string>
    <string name="label_group_avatar">Group avatar</string>
    <string name="label_enter">Enter</string>
    <string name="label_registration">Registration</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_no_groups">There are no groups…\nCreate a new</string>
    <string name="label_no_messages">There are no messages…\nSend a new</string>
    <string name="label_auth">Authorization</string>
    <string name="label_all_bills">All bills</string>
    <string name="label_no_bills">There are no bills…\nCreate a new</string>
    <string name="label_who_payed">Who paid:</string>
    <string name="label_for_whom">For whom:</string>
    <string name="label_title">Title</string>
    <string name="label_current_date">Current date</string>
    <string name="label_description">Description</string>
    <string name="label_sum">Sum</string>
    <string name="label_enter_sum_for_payers">Enter sum for those who paid:</string>
    <string name="label_enter_sum_for_debtors">Enter sum for those who debt:</string>
    <string name="label_message">Message…</string>
    <string name="label_dark_mode">Dark mode</string>
    <string name="label_edit_profile">Profile editing</string>
    <string name="label_delete_bill">Deleting bill</string>
    <string name="label_delete_message">Delete message?</string>
    <string name="label_delete">Delete</string>
    <string name="label_send_by_email">Sending by Email</string>
    <string name="label_group">Group</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_edit_group">Edit group</string>
    <string name="label_send">Send</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_send_statistics">Send statistics</string>
    <string name="label_profile">Profile</string>
    <string name="label_permission_required">Permission required</string>
    <string name="label_open_settings">Open settings</string>
    <string name="label_take_from_gallery">Take from gallery</string>
    <string name="label_take_from_camera">Take from camera</string>
    <string name="label_share_statistics">Biblo statistics</string>
    <string name="label_system_theme_mode">System</string>
    <string name="label_light_theme_mode">Light</string>
    <string name="label_dark_theme_mode">Dark</string>
    <string name="label_theme_mode">App theme</string>
    <string name="label_password_reset">Reset password</string>

    <string name="message_internet_error">No internet connection…</string>
    <string name="message_data_error">Error loading data…</string>
    <string name="message_debt_pay_sum">The amount of debt must match the amount of payment</string>
    <string name="message_add_title">Add title</string>
    <string name="message_add_member_name">Add member name</string>
    <string name="message_add_group_name">Add group name</string>
    <string name="message_add_currency">Choose currency</string>
    <string name="message_data_saved">Data saved!</string>
    <string name="message_registration_error">Registration error occurred…</string>
    <string name="message_auth_error">Authorization error occurred…</string>
    <string name="message_enter_email">Please enter Email</string>
    <string name="message_password_link_sent">Link has been sent!</string>
    <string name="message_send_password_link_question">Send a password recovery link to</string>
    <string name="message_no_user_found">No user with this address found…</string>
    <string name="message_member_contains">This member is already contained in the group</string>
    <string name="message_cant_delete_yourself">Unable to remove yourself from group</string>
    <string name="message_cant_delete_user">Unable to remove previously added user from group</string>
    <string name="message_group_contain_two_members">A group can have at least two members</string>
    <string name="message_user_added">User has been added!</string>
    <string name="message_need_open_settings">You need to grant permission to access images in settings</string>
    <string name="message_delete_group">Are you sure you want to delete the group?</string>

    <string-array name="currency">
        <item>₽</item>
        <item>$</item>
        <item>¢</item>
        <item>£</item>
        <item>¤</item>
        <item>¥</item>
        <item>֏</item>
        <item>৲</item>
        <item>৳</item>
        <item>৻</item>
        <item>૱</item>
        <item>௹</item>
        <item>฿</item>
        <item>៛</item>
        <item>₠</item>
        <item>₡</item>
        <item>₢</item>
        <item>₣</item>
        <item>₤</item>
        <item>₥</item>
        <item>₦</item>
        <item>₧</item>
        <item>₨</item>
        <item>₩</item>
        <item>₪</item>
        <item>₫</item>
        <item>€</item>
        <item>₭</item>
        <item>₮</item>
        <item>₯</item>
        <item>₰</item>
        <item>₲</item>
        <item>₳</item>
        <item>₴</item>
        <item>₵</item>
        <item>₶</item>
        <item>₷</item>
        <item>₸</item>
        <item>₹</item>
        <item>₺</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
